# bukzor.samsung-debloat

./: .gitignore  CLAUDE.md  LICENSE  README.md  aggressive-samsung-debloat.adb.sh  current-packages.txt  debloat.adb.sh  disable-samsung-duplicates.adb.sh  packages-install-dates.json  packages-install-dates.txt  pyproject.toml  remove-behavior-overrides.adb.sh  remove-samsung-ui-overlays.adb.sh
.claude/: CLAUDE.spot-check-app-verdicts.task.md  current-task.jsonschema.yaml
.claude/current-task.kb/: CLAUDE.md  README.md  android-apps.jsonschema.yaml  device.md  findings.jsonschema.yaml  forensic-analyses.jsonschema.yaml  forensic-sources.jsonschema.yaml  history.md  mission.md  timeline.jsonschema.yaml
docs/: devices.jsonschema.yaml
docs/devices.kb/: CLAUDE.md  mother-phone-01-verizon-samsung.md  mother-phone-02-galaxy-s24-plus.md
docs/devlog/: 2025-11-12-000-initial-debloat.md  2025-11-12.md  2025-11-13-000-project-cleanup.md  2025-11-13.md  CLAUDE.md
scripts/: android_apps_kb.py  android_apps_kb_test.py  app_reputation_probe.frontmatter.jq  app_reputation_probe.py  app_reputation_probe_test.py  app_reputation_to_kb.sh  app_reviews_probe.py  app_reviews_probe_test.py  forensic_report.py  forensic_report_test.py  master-debloat.adb.sh  myactivity.google.com.gap-analysis.jq  myactivity.google.com.jq  myactivity.google.com.records.jq  myactivity_scrape.py  myactivity_scrape_test.py  myactivity_takeout.py  myactivity_takeout_test.py  package_dump.py  package_dump_test.py  unknown-apps-timeline.jq  unknown-apps-timeline.sh  wayback_probe.py  wayback_probe_test.py
(+275 files in other folders)
